--- a/Cantons/bern.html
+++ b/Cantons/bern.html
@@ -16,19 +16,18 @@
     <h3>Landscapes from Luzern</h3>
     <img src="bern.jfif" alt="Best view " width="800" height="600" title="Switzerland">
     <p>Bern</p>
-
     <div>
         <h3>Places to visit</h3>
         <ul>
-            <li> Lorem 1 </li>
-            <li> Lorem 2 </li>   
+            <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique iste nulla laborum voluptates quaerat quas, nostrum reprehenderit voluptatem, aut soluta atque tempore temporibus officiis laudantium assumenda minus quae eum maiores? </li>
+            <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, reprehenderit? Nostrum, aspernatur. Porro ducimus quia odit expedita voluptatem, esse deleniti et eveniet, ipsum impedit non voluptates cupiditate quo facilis earum!  </li>   
         </ul>
     </div>
     <div>
         <h3>Restaurants</h3>
         <ol>
-            <li> lorem 1</li>
-            <li> lorem 2 </li>
+            <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, accusamus quidem! Sequi totam sed, repellat atque excepturi a repudiandae vel quisquam. Provident aliquam similique nam minima libero ipsum placeat consequatur.</li>
+            <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, illo perferendis? Consectetur ea excepturi quis ducimus sapiente nobis recusandae veritatis placeat itaque, dicta voluptatibus aut autem reiciendis cumque sunt. Eum? </li>
         </ol>
     </div>
     <div>
@@ -36,11 +35,12 @@
             <caption><b> Museums </b></caption>
             <tr>
                 <th>Museum name</th>
-                <td>Museum x</td>
-                <td>Museum b</td>
-                <td>Museum a</td>
-                <td>Museum z</td>
-                <td>Museum y</td>
+                <td>Museum X</td>
+                <td>Museum Y</td>
+                <td>Museum Z</td>
+                <td>Museum A</td>
+                <td>Museum B</td>
+                <td>Museum C</td>
             </tr>
         </table>
     </div>
