--- a/Cantons/index.html
+++ b/Cantons/index.html
@@ -16,19 +16,18 @@
     <h3>Landscapes from Switzerland</h3>
     <img src="landscape.jfif" alt="Best view " width="800" height="600" title="Switzerland">
     <p>Switzerland</p>
-
     <div>
         <h3>Places to visit</h3>
         <ul>
-            <li> Lorem 1 </li>
-            <li> Lorem 2 </li>   
+            <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod totam voluptatem autem repellendus omnis eaque quis iusto officia consequuntur vero similique, error tempore impedit suscipit id laborum. Delectus, rem repellendus! </li>
+            <li> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus in rerum minima autem sapiente architecto eligendi? Maiores ab est qui adipisci ex labore unde? Delectus excepturi illo nam in architecto. </li>   
         </ul>
     </div>
     <div>
         <h3>Restaurants</h3>
         <ol>
-            <li> lorem 1</li>
-            <li> lorem 2 </li>
+            <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora numquam quibusdam ipsa recusandae ipsum consequuntur nesciunt saepe similique qui. Modi nesciunt repudiandae accusamus facilis aliquam. Minus autem iure ullam eveniet.</li>
+            <li> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus enim perspiciatis magni ut repellat nam quo similique ipsam laborum culpa rem reprehenderit non nulla sed, architecto est, tenetur voluptatibus quae. </li>
         </ol>
     </div>
     <div>
@@ -36,11 +35,12 @@
             <caption> <b> Museums </b> </caption>
             <tr>
                 <th>Museum name</th>
-                <td>Museum x</td>
-                <td>Museum b</td>
-                <td>Museum a</td>
-                <td>Museum z</td>
-                <td>Museum y</td>
+                <td>Museum X</td>
+                <td>Museum Y</td>
+                <td>Museum Z</td>
+                <td>Museum A</td>
+                <td>Museum B</td>
+                <td>Museum C</td>
             </tr>
         </table>
     </div>
