--- a/Cantons/zurich.html
+++ b/Cantons/zurich.html
@@ -16,19 +16,18 @@
     <h3>Landscapes from Luzern</h3>
     <img src="zurich.jfif" alt="Best view " width="800" height="600" title="Switzerland">
     <p>Zurich</p>
-
     <div>
         <h3>Places to visit</h3>
         <ul>
-            <li> Lorem 1 </li>
-            <li> Lorem 2 </li>   
+            <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti rerum, commodi id, labore illum placeat facere fugit nulla incidunt obcaecati at vel voluptas dicta ad iusto quisquam magnam voluptate libero! </li>
+            <li> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem impedit enim, similique eligendi praesentium voluptatum accusamus asperiores? Pariatur nam, voluptas facere sequi dolorum quae, iure, dolores quo cupiditate eos voluptatum! </li>   
         </ul>
     </div>
     <div>
         <h3>Restaurants</h3>
         <ol>
-            <li> lorem 1</li>
-            <li> lorem 2 </li>
+            <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, adipisci dolore eius explicabo nam sapiente deserunt consequatur mollitia sunt labore esse cumque minima corrupti possimus aliquam. Suscipit perferendis explicabo minus.</li>
+            <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab sequi consequatur, ad quam architecto exercitationem consequuntur qui est distinctio atque, mollitia sed minus nobis repellat voluptas! Eius explicabo quasi harum! </li>
         </ol>
     </div>
     <div>
@@ -36,11 +35,12 @@
             <caption> <b> Museums </b> </caption>
             <tr>
                 <th>Museum name</th>
-                <td>Museum x</td>
-                <td>Museum b</td>
-                <td>Museum a</td>
-                <td>Museum z</td>
-                <td>Museum y</td>
+                <td>Museum X</td>
+                <td>Museum Y</td>
+                <td>Museum Z</td>
+                <td>Museum A</td>
+                <td>Museum B</td>
+                <td>Museum C</td>
             </tr>
         </table>
     </div>
