--- a/Cantons/luzern.html
+++ b/Cantons/luzern.html
@@ -16,19 +16,18 @@
     <h3>Landscapes from Luzern</h3>
     <img src="luzern.jfif" alt="Best view " width="800" height="600" title="Switzerland">
     <p>Luzern</p>
-
     <div>
         <h3>Places to visit</h3>
         <ul>
-            <li> Lorem 1 </li>
-            <li> Lorem 2 </li>   
+            <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium odio voluptatibus doloremque perspiciatis exercitationem est dolorem rerum facere reiciendis quos illo et, sapiente illum architecto aliquam sint. Consequuntur, quaerat ducimus!</li>
+            <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet at labore rem, facere recusandae fugit reiciendis illo quam perferendis qui, libero ullam eos quidem odit accusamus natus. Reprehenderit, sit nesciunt. </li>   
         </ul>
     </div>
     <div>
         <h3>Restaurants</h3>
         <ol>
-            <li> lorem 1</li>
-            <li> lorem 2 </li>
+            <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur culpa dolore, sit odio quos quia. Quisquam sequi mollitia, magni voluptatum doloremque recusandae sunt aliquam! Officiis laudantium soluta aperiam impedit aspernatur!</li>
+            <li> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem accusantium corrupti vitae! Quae vero perspiciatis asperiores, aut impedit at autem consequuntur, velit, atque repellendus repudiandae amet iste animi voluptatum cumque? </li>
         </ol>
     </div>
     <div>
@@ -36,11 +35,12 @@
             <caption> <b> Museums </b> </caption>
             <tr>
                 <th>Museum name</th>
-                <td>Museum x</td>
-                <td>Museum b</td>
-                <td>Museum a</td>
-                <td>Museum z</td>
-                <td>Museum y</td>
+                <td>Museum X</td>
+                <td>Museum Y</td>
+                <td>Museum Z</td>
+                <td>Museum A</td>
+                <td>Museum B</td>
+                <td>Museum C</td>
             </tr>
         </table>
     </div>
